mainfests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app
  labels:
    app: gitops-app
spec:
  replicas: 3  # Puedes ajustar el número de réplicas según sea necesario
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: gitops-app
  template:
    metadata:
      labels:
        app: gitops-app
    spec:
      containers:
      - name: gitops-container
        image: 2424833f/gitopsdocker:latest  # Imagen de tu Docker Hub
        ports:
        - containerPort: 80  # Puerto en el contenedor
