mainfests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-service
spec:
  selector:
    app: gitops-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
