mainfests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gitops.local # Cambia por tu dominio o subdominio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitops-service
            port:
              number: 80
